<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:orientation="vertical">
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/futuramedium"
    android:text="@string/promote"
    android:textColor="@color/black"
    android:textSize="35sp" />
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:fontFamily="@font/futurabook"
    android:text="@string/select_an_employee"
    android:textColor="@color/grey"
    android:textSize="20sp" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_weight="0.7"
    android:background="@drawable/rounded_20dp"
    android:backgroundTint="@color/burgundy"
    android:padding="20dp">
    <TextView
      android:id="@+id/employee_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/futurabook"
      android:textColor="@color/white"
      android:textSize="20sp" />
  </ScrollView>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginStart="70dp"
    android:layout_marginEnd="70dp"
    android:layout_weight="0.08"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_weight="0.2"
      android:fontFamily="@font/futurabook"
      android:text="@string/employee_id"
      android:textColor="@color/black"
      android:textSize="16sp" />

    <EditText
      android:id="@+id/admin_employee_id_input"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginEnd="10dp"
      android:layout_weight="0.2"
      android:backgroundTint="@color/black"
      android:fontFamily="@font/futurabook"
      android:inputType="numberPassword"
      android:textColor="@color/black"
      android:textSize="16sp" />

  </LinearLayout>

  <TextView
    android:id="@+id/promote_employee_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/futurabook"
    android:gravity="center"
    android:textColor="@color/burgundy" />
  <Button
    android:id="@+id/promote_button"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="40dp"
    android:layout_weight="0.1"
    android:background="@drawable/rounded_30dp"
    android:backgroundTint="@color/orange"
    android:fontFamily="@font/futuramedium"
    android:text="@string/promote_button"
    android:textColor="@color/white"
    android:textSize="20sp" />
</LinearLayout>