<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/almond"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/greeting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="25dp"
      android:layout_marginTop="15dp"
      android:fontFamily="@font/futuramedium"
      android:text="@string/hi"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="36sp" />

    <ImageView
      android:id="@+id/customer_cart"
      android:layout_width="45dp"
      android:layout_height="35dp"
      android:layout_marginStart="165dp"
      android:layout_marginTop="15dp"
      android:background="@drawable/salesapplogo"
      android:clickable="true" />
    <ImageView
      android:id="@+id/customer_logout"
      android:layout_width="35dp"
      android:layout_height="35dp"
      android:layout_marginStart="15dp"
      android:layout_marginTop="15dp"
      android:clickable="true"
      app:srcCompat="@drawable/logout" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
      android:layout_width="35dp"
      android:layout_height="35dp"
      android:layout_marginStart="25dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:src="@drawable/arrow" />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/futurabook"
      android:text="@string/restore"
      android:textSize="20sp" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="650dp"
    android:layout_gravity="bottom"
    android:layout_marginTop="25dp"
    android:background="@drawable/rounded_30dp"
    android:backgroundTint="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical">
    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="560dp"
      android:layout_marginTop="25dp"
      android:background="@drawable/rounded_30dp">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
          android:id="@+id/textView2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:fontFamily="@font/futuramedium"
          android:text="@string/items"
          android:textColor="@color/black"
          android:textSize="35sp" />

        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:orientation="horizontal">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginStart="100dp"
              android:layout_marginEnd="30dp"
              android:fontFamily="@font/futurabook"
              android:text="@string/hockey_stick"
              android:textColor="@color/black"
              android:textSize="20sp" />
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:fontFamily="@font/futuramedium"
              android:text="@string/price"
              android:textColor="@color/black"
              android:textSize="30sp" />
          </LinearLayout>
          <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:src="@mipmap/hockey_stick" />
        </FrameLayout>


        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="30dp"
          android:background="@drawable/rounded_30dp"
          android:backgroundTint="@color/platinum"
          android:orientation="vertical"></LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="30dp"
          android:background="@drawable/rounded_30dp"
          android:backgroundTint="@color/platinum"
          android:orientation="vertical"></LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="30dp"
          android:background="@drawable/rounded_30dp"
          android:backgroundTint="@color/platinum"
          android:orientation="vertical"></LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:layout_marginLeft="30dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="30dp"
          android:layout_marginBottom="30dp"
          android:background="@drawable/rounded_30dp"
          android:backgroundTint="@color/platinum"
          android:orientation="vertical"></LinearLayout>
      </LinearLayout>
    </ScrollView>
  </LinearLayout>
</LinearLayout>